add header + img

--- a/index.html
+++ b/index.html
@@ -1,15 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/bootstrap.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <title>Lando Schmuck</title>
-</head>
-<body>
-    <h1 class="text-danger">Hello World!</h1>
+    <header class="border border-dark container-fluid">
+      <div class="row bg-light mb-3">
+        <div class="col-sm col-md-offset-12">
+          <h1 class="h4">Lando Schmuck</h1>
+        </div>
+        <div class="col-md-4 h4">
+          <nav>
+            <a href="#">Kontakt</a>
+            <a href="#">Biografie</a>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="row">
+        <div class="border border-dark col-sm-12 col-s-12 col-md-6">
+          <img
+            class="container-fluid mb-3"
+            src="img/Lando.jpg"
+            alt="Foto von Lando"
+            width="45"
+            height="300"
+          />
+          <article class="col-sm col-md-offset-12mb-3">
+            <h2>About</h2>
+            <p>
+              Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
+              Nullam iaculis vitae lorem sit amet fringilla. Mauris pretium
+              porttitor molestie. Suspendisse ante tellus, placerat vel rhoncus
+              in, tempor ac dui. Curabitur aliquam enim id sollicitudin
+              faucibus. Nullam auctor <mark>ultricies</mark> dolor, eget
+              lobortis dui venenatis vitae. Morbi maximus lacinia mauris, eget
+              aliquet arcu gravida feugiat.
+            </p>
+          </article>
+        </div>
 
-    
-</body>
+        <article class="col-md-5 h4">
+          <h2></h2>Web Development Skills</h2>
+          <ul>
+             <li>HTML</li>
+           ^ <li>css</li>
+             <li>Bootstrap</li>
+          </ul>
+        </article>
+      </div>
+    </main>
+  </head>
 </html>
