--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Lando Schmuck</title>
     <header class="border border-dark container-fluid">
       <div class="row bg-light mb-3">
-        <div class="col-sm col-md-offset-12">
+        <div class="mt-2 col-sm col-md-offset">
           <h1 class="h4">Lando Schmuck</h1>
         </div>
-        <div class="col-md-4 h4">
+        <div class="mt-2 col-sm col-md-4 h4">
           <nav>
-            <a href="#">Kontakt</a>
+            <a href="#">Kontakt |</a>
             <a href="#">Biografie</a>
           </nav>
         </div>
@@ -21,7 +21,7 @@
     </header>
     <main>
       <div class="row">
-        <div class="border border-dark col-sm-12 col-s-12 col-md-6">
+        <div class="bg-light border border-dark col-sm-12 col-s-12 col-md-6">
           <img
             class="container-fluid mb-3"
             src="img/Lando.jpg"
@@ -29,7 +29,7 @@
             width="45"
             height="300"
           />
-          <article class="col-sm col-md-offset-12mb-3">
+          <article class="col-sm col-md-offset-12 mb-3">
             <h2>About</h2>
             <p>
               Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
@@ -43,12 +43,14 @@
           </article>
         </div>
 
-        <article class="col-md-5 h4">
-          <h2></h2>Web Development Skills</h2>
-          <ul>
-             <li>HTML</li>
-           ^ <li>css</li>
-             <li>Bootstrap</li>
+        <article
+          class="container text-white bg-border border-dark bg-secondary col-md h4 col-sm"
+        >
+          <h2 class="h4">Web Development Skills</h2>
+          <ul class="h5">
+            <li>HTML| Beginner</li>
+            <li>css | Beginner</li>
+            <li>Bootstrap | Beginner</li>
           </ul>
         </article>
       </div>
