--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <title>Lando Schmuck</title>
-    <header class="border border-dark container-fluid">
-      <div class="row bg-light mb-3">
+    <header class="border border-dark bg-dark container-fluid">
+      <div class="row mb-3">
         <div class="mt-2 col-sm col-md-offset">
-          <h1 class="h4">Lando Schmuck</h1>
+          <h1 class="h4 text-white">Lando Schmuck</h1>
         </div>
         <div class="mt-2 col-sm col-md-4 h4">
           <nav>
@@ -21,7 +21,7 @@
     </header>
     <main>
       <div class="row">
-        <div class="bg-light border border-dark col-sm-12 col-s-12 col-md-6">
+        <div class="bg-dark border border-dark col-sm-12 col-s-12 col-md-6">
           <img
             class="container-fluid mb-3"
             src="img/Lando.jpg"
@@ -29,7 +29,7 @@
             width="45"
             height="300"
           />
-          <article class="col-sm col-md-offset-12 mb-3">
+          <article class="text-white col-sm col-md-offset-12 mb-3">
             <h2>About</h2>
             <p>
               Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
@@ -44,7 +44,7 @@
         </div>
 
         <article
-          class="container text-white bg-border border-dark bg-secondary col-md h4 col-sm"
+          class="container text-white bg-border border-dark bg-dark col-md h4 col-sm"
         >
           <h2 class="h4">Web Development Skills</h2>
           <ul class="h5">
