--- a/index.html
+++ b/index.html
@@ -6,54 +6,66 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <title>Lando Schmuck</title>
-    <header class="border border-dark bg-dark container-fluid">
-      <div class="row mb-3">
-        <div class="mt-2 col-sm col-md-offset">
-          <h1 class="h4 text-white">Lando Schmuck</h1>
-        </div>
-        <div class="mt-2 col-sm col-md-4 h4">
-          <nav>
-            <a href="#">Kontakt |</a>
-            <a href="#">Biografie</a>
-          </nav>
-        </div>
+  </head>
+  <header class="border border-dark bg-dark container-fluid">
+    <div class="row mb-3">
+      <div class="mt-2 col-sm col-md-offset">
+        <h1 class="h4 text-white">Lando Schmuck</h1>
       </div>
-    </header>
-    <main>
-      <div class="row">
-        <div class="bg-dark border border-dark col-sm-12 col-s-12 col-md-6">
-          <img
-            class="container-fluid mb-3"
-            src="img/Lando.jpg"
-            alt="Foto von Lando"
-            width="45"
-            height="300"
-          />
-          <article class="text-white col-sm col-md-offset-12 mb-3">
-            <h2>About</h2>
-            <p>
-              Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
-              Nullam iaculis vitae lorem sit amet fringilla. Mauris pretium
-              porttitor molestie. Suspendisse ante tellus, placerat vel rhoncus
-              in, tempor ac dui. Curabitur aliquam enim id sollicitudin
-              faucibus. Nullam auctor <mark>ultricies</mark> dolor, eget
-              lobortis dui venenatis vitae. Morbi maximus lacinia mauris, eget
-              aliquet arcu gravida feugiat.
-            </p>
-          </article>
-        </div>
-
-        <article
-          class="container text-white bg-border border-dark bg-dark col-md h4 col-sm"
-        >
-          <h2 class="h4">Web Development Skills</h2>
-          <ul class="h5">
-            <li>HTML| Beginner</li>
-            <li>css | Beginner</li>
-            <li>Bootstrap | Beginner</li>
-          </ul>
+      <div class="mt-2 col-sm-12 col-md-4 col-sm-12  h4">
+        <nav>
+          <a href="#">Kontakt |</a>
+          <a href="#">Biografie</a>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="bg-dark">
+    <div class="row">
+      <div class="col-sm-12 col-s-12 col-md-6">
+        <img
+          class="container-fluid mb-3"
+          src="img/Lando.jpg"
+          alt="Foto von Lando"
+          width="45"
+          height="auto"
+        />
+        <article class="text-white col-sm col-md-offset-12">
+          <h2>About</h2>
+          <p>
+            Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
+            Nullam iaculis vitae lorem sit amet fringilla. Mauris pretium
+            porttitor molestie. Suspendisse ante tellus, placerat vel rhoncus
+            in, tempor ac dui. Curabitur aliquam enim id sollicitudin faucibus.
+            Nullam auctor <mark>ultricies</mark> dolor, eget lobortis dui
+            venenatis vitae. Morbi maximus lacinia mauris, eget aliquet arcu
+            gravida feugiat.
+          </p>
         </article>
       </div>
-    </main>
-  </head>
+      <article class="container-fluid text-white col-md h4 ml-3 col-sm-6">
+        <h2 class="h4 pl-3">Web Development Skills</h2>
+        <ul class="h6">
+          <li>HTML| Beginner</li>
+          <li>css | Beginner</li>
+          <li>Bootstrap | Beginner</li>
+        </ul>
+        <div
+          class="card bg-secondary mb-3 col-sm-6 mt-3"
+          style="max-width: 15rem;"
+        >
+          <div class="card-header h5">Soziales-Mensch</div>
+          <div class="card-body">
+            <h5 class="card-title">Lando</h5>
+            <p class="h5 card-text">
+              Hilfsbereit, Freundlich, Engagiert
+            </p>
+          </div>
+        </div>
+      </article>
+      <div class="row container-fluid">
+        <div class="d-flex p-2 bg-dark border-primary mb-3>
+      </div>
+    </div>
+  </main>
 </html>
