add contact area

--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
           </div>
         </div>
       </article>
-      <div class="row container-fluid">
-        <div class="d-flex p-2 bg-dark border-primary mb-3>
-      </div>
+      <div class="container ml-5 mb-5 mr-5 row text-primary border border-primary">
+        <section class=""><h5>Kontakt</h5>
+            <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
+        </section>
     </div>
   </main>
 </html>
