--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <div class="mt-2 col-sm-12 col-md-4 col-sm-12  h4">
         <nav>
-          <a href="#">Kontakt |</a>
+          <a href="#Kontakt">Kontakt |</a>
           <a href="#">Biografie</a>
         </nav>
       </div>
@@ -63,10 +63,37 @@
           </div>
         </div>
       </article>
-      <div class="container ml-5 mb-5 mr-5 row text-primary border border-primary">
-        <section class=""><h5>Kontakt</h5>
+      <div class="container ml-5 mb-3 mr-5 row text-primary border border-primary">
+        <section class="pt-3"><h5 id="Kontakt">Kontakt</h5>
             <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
         </section>
     </div>
+   
+    <div class="text-primary container-fluid ml-4 mr-4 text-center row">
+
+      <section class="col-md-4 col-sm-12 col-12">
+     <div class="card" style="width: 100%"><a target:="_blank" href=""><img class="card-img-top" src="img/github-icon-1.svg" alt="GITHUB"></a></div>
+      <div class="card-body">
+      <p class="card-test">github</p>
+    </div>
+    </section>
+
+     <section class="col-md-4 col-sm-12 col-12" >
+     <div class="card"  style="width: 100%"><a target:="_blank" href=""><img class="card-img-top" src="img/codepen-icon.svg" alt="CODEPEN"></a></div>
+     <div class="card-body">
+      <p class="card-test">codepen</p>
+    </div> 
+    </section>
+
+     <section class="col-md-4 col-sm-12 col-12 mb-3">
+     <div class="card"  style="width: 100%">
+      <a target:="_blank" href=""><img class="card-img-top" src="img/linkedin-icon.svg" alt="LINKEDIN"></a></div>
+    <div class="card-body">
+      <p class="card-test">linkedin</p>
+    </div>
+    </section>
+    </div>
+
+    
   </main>
 </html>
