--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <title>Lando Schmuck</title>
   </head>
+  <body>
   <header class="border border-dark bg-dark container-fluid">
     <div class="row mb-3">
       <div class="mt-2 col-sm col-md-offset">
@@ -44,56 +45,56 @@
         </article>
       </div>
       <article class="container-fluid text-white col-md h4 ml-3 col-sm-6">
-        <h2 class="h4 pl-3">Web Development Skills</h2>
-        <ul class="h6">
-          <li>HTML| Beginner</li>
-          <li>css | Beginner</li>
-          <li>Bootstrap | Beginner</li>
-        </ul>
-        <div
-          class="card bg-secondary mb-3 col-sm-6 mt-3"
-          style="max-width: 15rem;"
-        >
-          <div class="card-header h5">Soziales-Mensch</div>
-          <div class="card-body">
-            <h5 class="card-title">Lando</h5>
-            <p class="h5 card-text">
-              Hilfsbereit, Freundlich, Engagiert
-            </p>
-          </div>
+        <h2 class="h6">Berufliche Eigenschaften</h2>
+        <div style="font-size: 1.2rem; line-height: 1.1em"; class = mb-4>
+          <span class="badge badge-primary">Belastbar</span>
+          <span class="badge badge-primary">Wissbegierig</span>
+          <span class="badge badge-primary">Coder</span>
+          <span class="badge badge-primary">Hohe Aufassungsgabe</span>
+          <span class="badge badge-primary">Unternehmertum</span>
+        </div>
+            <h2 class="h6">Privates</h2>
+          <div style="font-size: 1.4rem;  line-height: 1.1em"; class = mb-4>
+            <span class="badge badge-primary">Wintersport</span>
+            <span class="badge badge-primary">Kochen</span>
+            <span class="badge badge-primary">Abenteurer</span>
+            <span class="badge badge-primary">Reisen</span>
         </div>
       </article>
-      <div class="container ml-5 mb-3 mr-5 row text-primary border border-primary">
+      <div class="container-fluid ml-4 mb-3 mr-5 row text-primary border border-primary">
         <section class="pt-3"><h5 id="Kontakt">Kontakt</h5>
             <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
         </section>
+      </div>
     </div>
+        <article class="container  row">
+       <section class="col-sm-12 col-md-4 mt-2">
+           <div class="card p-1" style="width: 100%;">
+               <a href="https://github.com/" target="_blank"><img src="img/github-icon-1.svg" class="card-img-top" alt="github-icon">
+               <div class="card-body">
+                   <p class="card-text">GITHUB.</p></a>
+               </div>
+           </div>
+           </section>
+           <section class="col-sm-12 col-md-4 mt-2">
+           <div class="card p-1" style="width: 100%;">
+               <a href="http://codepen.com" target="_blank"><img src="Img/codepen-icon.svg" class="card-img-top" alt="codepen-icon">
+               <div class="card-body">
+                   <p class="card-text">CODEPEN.</p></a>
+               </div>
+           </div>
+           </section>
+           <section class="col-sm-12 col-md-4 mt-2">
+           <div class="card p-1" style="width: 100%;">
+               <a href="http://linkedin.de" target="_blank"><img src="Img/linkedin-icon.svg" class="card-img-top" alt="linkedin-icon">
+               <div class="card-body">
+                   <p class="card-text">LINKEDIN.</p></a>
+               </div>
+              </div>
+              </section>
+            </article>
    
-    <div class="text-primary container-fluid ml-4 mr-4 text-center row">
-
-      <section class="col-md-4 col-sm-12 col-12">
-     <div class="card" style="width: 100%"><a target:="_blank" href=""><img class="card-img-top" src="img/github-icon-1.svg" alt="GITHUB"></a></div>
-      <div class="card-body">
-      <p class="card-test">github</p>
-    </div>
-    </section>
-
-     <section class="col-md-4 col-sm-12 col-12" >
-     <div class="card"  style="width: 100%"><a target:="_blank" href=""><img class="card-img-top" src="img/codepen-icon.svg" alt="CODEPEN"></a></div>
-     <div class="card-body">
-      <p class="card-test">codepen</p>
-    </div> 
-    </section>
-
-     <section class="col-md-4 col-sm-12 col-12 mb-3">
-     <div class="card"  style="width: 100%">
-      <a target:="_blank" href=""><img class="card-img-top" src="img/linkedin-icon.svg" alt="LINKEDIN"></a></div>
-    <div class="card-body">
-      <p class="card-test">linkedin</p>
-    </div>
-    </section>
-    </div>
-
-    
   </main>
+    </body>
 </html>
+
