--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="mt-2 col-sm-12 col-md-4 col-sm-12  h4">
         <nav>
           <a href="#Kontakt">Kontakt |</a>
-          <a href="#">Biografie</a>
+          <a href="#Biografie">Biografie</a>
         </nav>
       </div>
     </div>
@@ -67,7 +67,7 @@
         </section>
       </div>
     </div>
-        <article class="container  row">
+        <article class="container row mb-3 ml-3">
        <section class="col-sm-12 col-md-4 mt-2">
            <div class="card p-1" style="width: 100%;">
                <a href="https://github.com/" target="_blank"><img src="img/github-icon-1.svg" class="card-img-top" alt="github-icon">
@@ -93,8 +93,25 @@
               </div>
               </section>
             </article>
-   
-  </main>
+
+<article class="row container text-light">
+
+<section class="col-sm-12 col-md-6">
+<h2 id="Biografie">Biografie</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, molestias quia explicabo magnam facilis consequuntur nisi est ipsa nostrum! Quo, modi temporibus amet cumque reprehenderit nulla minus eaque perferendis culpa.</p>
+</section>
+
+<Section class="col-sm-12 col-md-6">
+  <h3>Lebenslauf</h3>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque reprehenderit laborum inventore blanditiis minus iure, repudiandae, asperiores porro rem iusto repellat id eaque tempora nam. Libero iste reiciendis tempora numquam!</p>
+</Section>
+</article>
+      </main>
+      <footer class="bg-dark container-fluid">
+        <a href="#">Quellen</a>
+          <a href="#">Links</a>
+          <a href="#">Links</a>
+      </footer>
     </body>
 </html>
 
