--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <footer class="bg-dark container-fluid">
         <a href="#">Quellen</a>
           <a href="#">Links</a>
-          <a href="#">Links</a>
+          <a href="#">Impressum</a>
       </footer>
     </body>
 </html>
