change Background color

--- a/index.html
+++ b/index.html
@@ -8,110 +8,136 @@
     <title>Lando Schmuck</title>
   </head>
   <body>
-  <header class="border border-dark bg-dark container-fluid">
-    <div class="row mb-3">
-      <div class="mt-2 col-sm col-md-offset">
-        <h1 class="h4 text-white">Lando Schmuck</h1>
+    <header class="border border-dark bg-light container-fluid">
+      <div class="row mb-3">
+        <div class="mt-2 col-sm col-md-offset">
+          <h1 class="h6">Lando <strong class="h4">Schmuck</strong></h1>
+        </div>
+        <div class="mt-3 col-sm-12 col-md-4 col-sm-12  h6">
+          <nav>
+            <a href="#Kontakt">Kontakt |</a>
+            <a href="#Biografie">Biografie</a>
+          </nav>
+        </div>
       </div>
-      <div class="mt-2 col-sm-12 col-md-4 col-sm-12  h4">
-        <nav>
-          <a href="#Kontakt">Kontakt |</a>
-          <a href="#Biografie">Biografie</a>
-        </nav>
-      </div>
-    </div>
-  </header>
-  <main class="bg-dark">
-    <div class="row">
-      <div class="col-sm-12 col-s-12 col-md-6">
-        <img
-          class="container-fluid mb-3"
-          src="img/Lando.jpg"
-          alt="Foto von Lando"
-          width="45"
-          height="auto"
-        />
-        <article class="text-white col-sm col-md-offset-12">
-          <h2>About</h2>
-          <p>
-            Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
-            Nullam iaculis vitae lorem sit amet fringilla. Mauris pretium
-            porttitor molestie. Suspendisse ante tellus, placerat vel rhoncus
-            in, tempor ac dui. Curabitur aliquam enim id sollicitudin faucibus.
-            Nullam auctor <mark>ultricies</mark> dolor, eget lobortis dui
-            venenatis vitae. Morbi maximus lacinia mauris, eget aliquet arcu
-            gravida feugiat.
-          </p>
+    </header>
+    <main class="bg-light">
+      <div class="row">
+        <div class="col-sm-12 col-s-12 col-md-6">
+          <img
+            class="container-fluid mb-3"
+            src="img/Lando.jpg"
+            alt="Foto von Lando"
+            width="45"
+            height="auto"
+          />
+          <article class="col-sm col-md-offset-12">
+            <h2>About</h2>
+            <p>
+              Lorem ipsum dolor sit amet, <strong> adipiscing</strong> elit.
+              Nullam iaculis vitae lorem sit amet fringilla. Mauris pretium
+              porttitor molestie. Suspendisse ante tellus, placerat vel rhoncus
+              in, tempor ac dui. Curabitur aliquam enim id sollicitudin
+              faucibus. Nullam auctor <mark>ultricies</mark> dolor, eget
+              lobortis dui venenatis vitae. Morbi maximus lacinia mauris, eget
+              aliquet arcu gravida feugiat.
+            </p>
+          </article>
+        </div>
+        <article class="container-fluid col-md h4 mt-3 ml-3 col-sm-6">
+          <h2 class="h6">Berufliche Eigenschaften</h2>
+          <div style="font-size: 1.2rem; line-height: 1.1em" ; class="mb-4">
+            <span class="badge badge-secondary">Belastbar</span>
+            <span class="badge badge-secondary">Wissbegierig</span>
+            <span class="badge badge-secondary">Coder</span>
+            <span class="badge badge-secondary">Hohe Aufassungsgabe</span>
+            <span class="badge badge-secondary">Unternehmertum</span>
+          </div>
+          <h2 class="h6">Privates</h2>
+          <div style="font-size: 1.4rem;  line-height: 1.1em" ; class="mb-4">
+            <span class="badge badge-secondary">Wintersport</span>
+            <span class="badge badge-secondary">Kochen</span>
+            <span class="badge badge-secondary">Abenteurer</span>
+            <span class="badge badge-secondary">Reisen</span>
+          </div>
         </article>
       </div>
-      <article class="container-fluid text-white col-md h4 ml-3 col-sm-6">
-        <h2 class="h6">Berufliche Eigenschaften</h2>
-        <div style="font-size: 1.2rem; line-height: 1.1em"; class = mb-4>
-          <span class="badge badge-primary">Belastbar</span>
-          <span class="badge badge-primary">Wissbegierig</span>
-          <span class="badge badge-primary">Coder</span>
-          <span class="badge badge-primary">Hohe Aufassungsgabe</span>
-          <span class="badge badge-primary">Unternehmertum</span>
-        </div>
-            <h2 class="h6">Privates</h2>
-          <div style="font-size: 1.4rem;  line-height: 1.1em"; class = mb-4>
-            <span class="badge badge-primary">Wintersport</span>
-            <span class="badge badge-primary">Kochen</span>
-            <span class="badge badge-primary">Abenteurer</span>
-            <span class="badge badge-primary">Reisen</span>
-        </div>
-      </article>
-      <div class="container-fluid ml-4 mb-3 mr-5 row text-primary border border-primary">
-        <section class="pt-3"><h5 id="Kontakt">Kontakt</h5>
-            <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
+      <div class="row container">
+        <section class="col">
+          <h5 id="Kontakt">Kontakt</h5>
+          <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
         </section>
       </div>
-    </div>
-        <article class="container row mb-3 ml-3">
-       <section class="col-sm-12 col-md-4 mt-2">
-           <div class="card p-1" style="width: 100%;">
-               <a href="https://github.com/" target="_blank"><img src="img/github-icon-1.svg" class="card-img-top" alt="github-icon">
-               <div class="card-body">
-                   <p class="card-text">GITHUB.</p></a>
-               </div>
-           </div>
-           </section>
-           <section class="col-sm-12 col-md-4 mt-2">
-           <div class="card p-1" style="width: 100%;">
-               <a href="http://codepen.com" target="_blank"><img src="Img/codepen-icon.svg" class="card-img-top" alt="codepen-icon">
-               <div class="card-body">
-                   <p class="card-text">CODEPEN.</p></a>
-               </div>
-           </div>
-           </section>
-           <section class="col-sm-12 col-md-4 mt-2">
-           <div class="card p-1" style="width: 100%;">
-               <a href="http://linkedin.de" target="_blank"><img src="Img/linkedin-icon.svg" class="card-img-top" alt="linkedin-icon">
-               <div class="card-body">
-                   <p class="card-text">LINKEDIN.</p></a>
-               </div>
+      <article class="row mb-3 container">
+        <section class="img-fluid col-sm-12 col-md-4 mt-2">
+          <div class="card p-1" style="width: 100%;">
+            <a href="https://github.com/" target="_blank"
+              ><img
+                src="img/github-icon-1.svg"
+                class="card-img-top"
+                alt="github-icon"
+              />
+              <div class="card-body">
+                <p class="card-text">GITHUB.</p>
               </div>
-              </section>
-            </article>
+            </a>
+          </div>
+        </section>
+        <section class="img-fluid col-sm-12 col-md-4 mt-2">
+          <div class="card p-1" style="width: 100%;">
+            <a href="http://codepen.com" target="_blank"
+              ><img
+                src="Img/codepen-icon.svg"
+                class="card-img-top"
+                alt="codepen-icon"
+              />
+              <div class="card-body">
+                <p class="card-text">CODEPEN.</p>
+              </div>
+            </a>
+          </div>
+        </section>
+        <section class="img-fluid col-sm-12 col-md-4 mt-2">
+          <div class="card p-1" style="width: 100%;">
+            <a href="http://linkedin.de" target="_blank"
+              ><img
+                src="Img/linkedin-icon.svg"
+                class="card-img-top"
+                alt="linkedin-icon"
+              />
+              <div class="card-body">
+                <p class="card-text">LINKEDIN.</p>
+              </div>
+            </a>
+          </div>
+        </section>
+      </article>
+      <article class="row container">
+        <section class="col-sm-12 col-md-6">
+          <h2 id="Biografie">Biografie</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut,
+            molestias quia explicabo magnam facilis consequuntur nisi est ipsa
+            nostrum! Quo, modi temporibus amet cumque reprehenderit nulla minus
+            eaque perferendis culpa.
+          </p>
+        </section>
 
-<article class="row container text-light">
-
-<section class="col-sm-12 col-md-6">
-<h2 id="Biografie">Biografie</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, molestias quia explicabo magnam facilis consequuntur nisi est ipsa nostrum! Quo, modi temporibus amet cumque reprehenderit nulla minus eaque perferendis culpa.</p>
-</section>
-
-<Section class="col-sm-12 col-md-6">
-  <h3>Lebenslauf</h3>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque reprehenderit laborum inventore blanditiis minus iure, repudiandae, asperiores porro rem iusto repellat id eaque tempora nam. Libero iste reiciendis tempora numquam!</p>
-</Section>
-</article>
-      </main>
-      <footer class="bg-dark container-fluid">
-        <a href="#">Quellen</a>
-          <a href="#">Links</a>
-          <a href="#">Impressum</a>
-      </footer>
-    </body>
+        <Section class="col-sm-12 col-md-6">
+          <h3>Lebenslauf</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque
+            reprehenderit laborum inventore blanditiis minus iure, repudiandae,
+            asperiores porro rem iusto repellat id eaque tempora nam. Libero
+            iste reiciendis tempora numquam!
+          </p>
+        </Section>
+      </article>
+    </main>
+    <footer class="bg-light container-fluid">
+      <a href="#">Quellen</a>
+      <a href="#">Links</a>
+      <a href="#">Impressum</a>
+    </footer>
+  </body>
 </html>
-
