--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
           </div>
         </article>
       </div>
-      <div class="row container">
-        <section class="col">
-          <h5 id="Kontakt">Kontakt</h5>
-          <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
-        </section>
+      <div class="container-fluid">
+        <div class="row mb-3">
+          <section class="col shadow-lg p-3 mb-3 bg-light rounded">
+            <h5 id="Kontakt">Kontakt</h5>
+            <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
+          </section>
+        </div>
       </div>
-      <article class="row mb-3 container">
+      <article class="container">
+        <div class="row mb-3">
         <section class="img-fluid col-sm-12 col-md-4 mt-2">
           <div class="card p-1" style="width: 100%;">
             <a href="https://github.com/" target="_blank"
@@ -112,6 +115,7 @@
           </div>
         </section>
       </article>
+      </div>
       <article class="row container">
         <section class="col-sm-12 col-md-6">
           <h2 id="Biografie">Biografie</h2>
