--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Lando Schmuck</title>
   </head>
   <body>
-    <header class="border border-dark bg-light container-fluid">
+    <header class="shadow p-3 mb-5 bg-white rounded container-fluid">
       <div class="row mb-3">
         <div class="mt-2 col-sm col-md-offset">
           <h1 class="h6">Lando <strong class="h4">Schmuck</strong></h1>
