--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Lando Schmuck</title>
   </head>
   <body>
-    <header class="shadow p-3 mb-5 bg-white rounded container-fluid">
-      <div class="row mb-3">
+    <header class="shadow p-3 mb-5 bg-light rounded container-fluid">
+      <div class="row bg-light mb-3">
         <div class="mt-2 col-sm col-md-offset">
-          <h1 class="h6">Lando <strong class="h4">Schmuck</strong></h1>
+          <h1 class="h6">Lando <strong class="h4 text-warning">Schmuck</strong></h1>
         </div>
         <div class="mt-3 col-sm-12 col-md-4 col-sm-12  h6">
           <nav>
@@ -71,10 +71,10 @@
         </div>
       </div>
       <article class="container">
-        <div class="row mb-3">
+        <div class="row mb-2">
         <section class="img-fluid col-sm-12 col-md-4 mt-2">
           <div class="card p-1" style="width: 100%;">
-            <a href="https://github.com/" target="_blank"
+            <a href="https://github.com/landoschmuck" target="_blank"
               ><img
                 src="img/github-icon-1.svg"
                 class="card-img-top"
@@ -88,7 +88,7 @@
         </section>
         <section class="img-fluid col-sm-12 col-md-4 mt-2">
           <div class="card p-1" style="width: 100%;">
-            <a href="http://codepen.com" target="_blank"
+            <a href="https://codepen.io/landoschmuck/" target="_blank"
               ><img
                 src="Img/codepen-icon.svg"
                 class="card-img-top"
@@ -116,7 +116,7 @@
         </section>
       </article>
       </div>
-      <article class="row container">
+      <article class="row container-fluid p-3 shadow-lg mb-5 mt-5 bg-white rounded">
         <section class="col-sm-12 col-md-6">
           <h2 id="Biografie">Biografie</h2>
           <p>
@@ -138,10 +138,10 @@
         </Section>
       </article>
     </main>
-    <footer class="bg-light container-fluid">
-      <a href="#">Quellen</a>
-      <a href="#">Links</a>
-      <a href="#">Impressum</a>
+    <footer class="row mb-4 bg-white container-fluid">
+      <a class="col-3" href="#">Quellen</a>
+      <a class="col-3" href="#">Links</a>
+      <a class="col-3" href="#">Impressum</a>
     </footer>
   </body>
 </html>
