--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </section>
       </article>
-      </div>
+      
       <article class="row container-fluid p-3 shadow-lg mb-5 mt-5 bg-white rounded">
         <section class="col-sm-12 col-md-6">
           <h2 id="Biografie">Biografie</h2>
@@ -138,10 +138,21 @@
         </Section>
       </article>
     </main>
-    <footer class="row mb-4 bg-white container-fluid">
-      <a class="col-3" href="#">Quellen</a>
-      <a class="col-3" href="#">Links</a>
-      <a class="col-3" href="#">Impressum</a>
+
+    <footer class="mb-4 bg-white container-fluid">
+      <div class="row">
+
+      <div class="col-4">
+        <button class="btn">
+          <a class="col-3" href="#">Quellen</a>
+        </button>
+      </div>
+
+      <div class="col-4"><button class="btn"><a class="col-3" href="#">Links</a></button></div>
+      <div class="col-4"><button class="btn"><a class="col-3" href="#">Impressum</a></button></div>
+    </div>
+    </div>
+    
     </footer>
   </body>
 </html>
