--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="shadow p-3 mb-5 bg-light rounded container-fluid">
       <div class="row bg-light mb-3">
         <div class="mt-2 col-sm col-md-offset">
-          <h1 class="h6">Lando <strong class="h4 text-warning">Schmuck</strong></h1>
+          <h1 class="h6">Lando <strong class="h4 text-warning "><i>Schmuck</i></strong></h1>
         </div>
         <div class="mt-3 col-sm-12 col-md-4 col-sm-12  h6">
           <nav>
@@ -26,8 +26,8 @@
         <div class="col-sm-12 col-s-12 col-md-6">
           <img
             class="container-fluid mb-3"
-            src="img/Lando.jpg"
-            alt="Foto von Lando"
+            src="img/dose-media-424257-unsplash.jpg"
+            alt="foto tisch mac"
             width="45"
             height="auto"
           />
@@ -57,7 +57,6 @@
           <div style="font-size: 1.4rem;  line-height: 1.1em" ; class="mb-4">
             <span class="badge badge-secondary">Wintersport</span>
             <span class="badge badge-secondary">Kochen</span>
-            <span class="badge badge-secondary">Abenteurer</span>
             <span class="badge badge-secondary">Reisen</span>
           </div>
         </article>
@@ -65,7 +64,7 @@
       <div class="container-fluid">
         <div class="row mb-3">
           <section class="col shadow-lg p-3 mb-3 bg-light rounded">
-            <h5 id="Kontakt">Kontakt</h5>
+            <h5 id="Kontakt"><i class="fa fa-paper-plane"></i>Kontakt</h5>
             <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
           </section>
         </div>
@@ -138,21 +137,17 @@
         </Section>
       </article>
     </main>
-
     <footer class="mb-4 bg-white container-fluid">
       <div class="row">
-
       <div class="col-4">
         <button class="btn">
           <a class="col-3" href="#">Quellen</a>
         </button>
       </div>
-
       <div class="col-4"><button class="btn"><a class="col-3" href="#">Links</a></button></div>
       <div class="col-4"><button class="btn"><a class="col-3" href="#">Impressum</a></button></div>
     </div>
     </div>
-    
     </footer>
   </body>
 </html>
