--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" /> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
     <title>Lando Schmuck</title>
   </head>
   <body>
@@ -64,7 +64,7 @@
       <div class="container-fluid">
         <div class="row mb-3">
           <section class="col shadow-lg p-3 mb-3 bg-light rounded">
-            <h5 id="Kontakt"><i class="fa fa-paper-plane"></i>Kontakt</h5>
+            <h5 id="Kontakt">Kontakt <i class="fa fa-paper-plane"></i></h5>
             <p>Mobil: +49 176 55610173 | E-Mail: Landoschmuck@hotmail.de</p>
           </section>
         </div>
@@ -139,14 +139,23 @@
     </main>
     <footer class="mb-4 bg-white container-fluid">
       <div class="row">
+
       <div class="col-4">
         <button class="btn">
           <a class="col-3" href="#">Quellen</a>
         </button>
       </div>
-      <div class="col-4"><button class="btn"><a class="col-3" href="#">Links</a></button></div>
-      <div class="col-4"><button class="btn"><a class="col-3" href="#">Impressum</a></button></div>
-    </div>
+      <div class="col-4">
+        <button class="btn">
+          <a class="col-3" href="#">Links
+          </a>
+        </button>
+      </div>
+      <div class="col-4"><button class="btn">
+        <a class="col-3" href="#">Impressum
+        </a>
+      </button>
+      </div>
     </div>
     </footer>
   </body>
