--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="card p-1" style="width: 100%;">
             <a href="https://codepen.io/landoschmuck/" target="_blank"
               ><img
-                src="Img/codepen-icon.svg"
+                src="img/codepen-icon.svg"
                 class="card-img-top"
                 alt="codepen-icon"
               />
@@ -103,7 +103,7 @@
           <div class="card p-1" style="width: 100%;">
             <a href="http://linkedin.de" target="_blank"
               ><img
-                src="Img/linkedin-icon.svg"
+                src="img/linkedin-icon.svg"
                 class="card-img-top"
                 alt="linkedin-icon"
               />
