--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header class="shadow p-3 mb-5 bg-light rounded container-fluid">
       <div class="row bg-light mb-3">
         <div class="mt-2 col-sm col-md-offset">
-          <h1 class="h6">Lando <strong class="h4 text-warning "><i>Schmuck</i></strong></h1>
+          <h1 class="h6">Lando <strong class="h4 text-primary "><i>Schmuck</i></strong></h1>
         </div>
-        <div class="mt-3 col-sm-12 col-md-4 col-sm-12  h6">
+        <div class="d-flex mt-3 col-sm-12 col-md-4 col-sm-12 justify-content-md-end h6">
           <nav>
             <a href="#Kontakt">Kontakt |</a>
             <a href="#Biografie">Biografie</a>
